--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
   broker-service:
     build:
       context: ./../broker-service
@@ -21,6 +20,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+    ports:
+      - "5001:5001"
+      - "50001:50001"
     networks:
       - app_network
 
@@ -72,7 +74,7 @@ services:
       - app_network
 
   postgres:
-    image: 'postgres:17'
+    image: "postgres:17"
     ports:
       - "5432:5432"
     restart: always
@@ -89,7 +91,7 @@ services:
       - app_network
 
   mongo:
-    image: 'mongo:7.0'
+    image: "mongo:7.0"
     ports:
       - "27017:27017"
     environment:
@@ -102,7 +104,7 @@ services:
       - app_network
 
   mailhog:
-    image: 'mailhog/mailhog:latest'
+    image: "mailhog/mailhog:latest"
     ports:
       - "1025:1025"
       - "8025:8025"
@@ -110,7 +112,7 @@ services:
       - app_network
 
   rabbitmq:
-    image: 'rabbitmq:3.12-management'
+    image: "rabbitmq:3.12-management"
     ports:
       - "5672:5672"
     deploy:
